fix heading overflow

--- a/src/containers/ContentHeader/contentHeader.module.scss
+++ b/src/containers/ContentHeader/contentHeader.module.scss
@@ -9,6 +9,10 @@
   font-size: var(--fontSizeHeading);
   font-weight: var(--fontWeightBold);
   line-height: var(--lineHeightHeading);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 64vw;
 }
 
 @media screen and (max-width: 767px) {
